--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = topdesk-python
-version = 0.1.8
+version = 0.1.9s
 author = Linus
 author_email = element.oxygen@gmail.com
 description = Topdesk Integration for Python
